# baseinfo

./: Cargo.toml
src/: main.rs  test.rs
src/bean/: app_state_dyn.rs  attachment.rs  json_result.rs  mod.rs  page_request.rs  product_suggest_vo.rs  supplier_account_entity.rs  supplier_account_param.rs  supplier_entity.rs  supplier_finance_bank_entity.rs  supplier_param.rs  supplier_product_entity.rs  supplier_vo.rs
src/constants/: mod.rs  product_contants.rs  supplier_constants.rs
src/controller/: mod.rs  supplier_controller.rs
src/dao/: bank.rs  bank_branch.rs  category.rs  company.rs  menu_manager.rs  mod.rs  org.rs  prelude.rs  shop.rs  shop_0625.rs  shop_asset.rs  shop_finance.rs  supplier.rs  supplier_account.rs  supplier_finance_bank.rs  supplier_repo.rs  supplier_test.rs
src/entity/: commercial_area.rs  product.rs  product_asset.rs  product_image.rs  product_sku.rs  product_sku_material.rs  product_spu.rs  shop_attachment.rs  shop_tmp.rs  supplier.rs  supplier_product.rs
src/repository/: mod.rs  supplier_account_repo.rs  supplier_finance_bank_repo.rs  supplier_repo.rs
src/service/: mod.rs  supplier_account_service.rs  supplier_save_checker.rs  supplier_service.rs
src/sso/: auth.rs  bean.rs  mod.rs  user_detail_dao.rs
src/utils/: m_assert.rs  mod.rs  option_date_format.rs  phone_utils.rs
