[package]
name = "baseinfo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
sea-orm = { version = "1.0.0-rc.7", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "debug-print"] }
chrono = "0.4.38"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time", "local-time"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
reqwest = { version = "0.11.24", features = ["json"] }
rand = "0.8.5"
md5 = "0.7.0"